--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,10 @@
-<div class="comments-container">
-  <%= render partial: 'comments/comment_form' %>
+<div class="comments-wrap wrap">
+  <%= button_to close_comment_path(@feedmicropost.id), { method: :get, class: "reply-close-btn btn-link", style: "text-align: center; background-color: #95a5a6; margin: 0px; border-top-left-radius: 16px; border-top-right-radius: 16px; width: 100%; height: 20px;", remote: true } do %>
+    <i class="fa-solid fa-caret-up fa-lg" data-fa-transform="up-1" style="color: white;"></i>
+  <% end %>
 
   <div class="comments">
+    <%= render partial: 'comments/comment_form' %>
     <%= render @comments %>
   </div>
 </div>
