--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-default">
-  <div class="container">
+  <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
+  <% container_class = "container" if !logged_in? %>
+  <div class=<%= container_class %>>
     <% if logged_in? %>
       <div class="icon-container">
         <%= link_to notified_notifications_path do %>
@@ -21,7 +23,7 @@
       <span class="icon-bar"></span>
     </button>
     <div class="navbar-header">
-      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "51px"), root_path, 'data-turbolinks': false, id: "service_logo" %>
+      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "100%"), root_path, 'data-turbolinks': false, id: "service_logo" %>
       <%= render partial: 'layouts/keyword_search_form', locals: { keywords: @keywords } %>
     </div>
     <nav role="navigation">
@@ -30,11 +32,11 @@
           <li><%= link_to "Home", root_path, 'data-turbolinks': false %></li>
           <% if logged_in? %>
             <li><%= link_to "MyPortcurio", portcurio_user_path(current_user), 'data-turbolinks': false %></li>
+          <% end %>
             <li><%= link_to "Links", links_path %></li>
             <li><%= link_to "Feed", microposts_path %></li>
             <li><%= link_to "Users", users_path %></li>
             <li><%= link_to "Help", help_path %></li>
-          <% end %>
           <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
