--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <% if @noindex %>
+      <meta name="robots" content="noindex">
+    <% end %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= display_meta_tags(default_meta_tags(full_title(yield(:title)))) %>
@@ -38,31 +41,38 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
-    <%= render 'layouts/header' if logged_in? %>
+    <%= render 'layouts/header' %>
 
-    <div class="container">
+    <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
+    <div class=<%= container_class %>>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
 
       <% if logged_in? %>
-        <div class="row">
+        <div class="wrapper">
           <%= render 'layouts/sidebar' %>
-          <div class="col-md-7 col-sm-7">
+          <main>
             <%= yield %>
-          </div>
+          </main>
         </div>
       <% else %>
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 center">
+        <% if request.path_info == login_path || request.path_info == signup_path %>
+          <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 center">
+              <%= yield %>
+            </div>
+          </div>
+        <% else %>
+          <div class="container">
             <%= yield %>
           </div>
-        </div>
+        <% end %>
       <% end %>
-      
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
     </div>
+      
+    <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
     <%# <!-- pdfの遅延読み込み --> %>
     <%# <script>
       function pdf_defer() {
